--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dt207g_proj_frontend",
   "version": "1.0.0",
   "description": "",
-  "source": "src/index.js",
+  "source": "src/index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel",
